# yeah

./: .gitignore  Cargo.toml  README-zh.md  README.md
config/: config.yml
frontend/: astro.config.mjs  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json
frontend/src/components/home/: Avatar.svelte  AvatarGroup.svelte  Date.svelte  Footer.astro  Groups.svelte  Header.astro  LinkCard.astro  LinkCard.svelte  LinkCards.svelte  Main.astro  Messages.svelte  SearchBar.svelte  SearchBarWrapper.astro  Weather.svelte
frontend/src/components/icons/: Google.svelte  Magnify.svelte
frontend/src/components/service/: Link.svelte
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: font.css  global.css
frontend/src/types/: common.ts  config.ts  group.ts  message.ts  service.ts  weather.ts
frontend/src/types/service/: link.ts
frontend/src/utils/: emoji.ts  href.ts
yeah/: Cargo.toml
yeah/src/: common.rs  config.rs  group.rs  lib.rs  main.rs  message.rs  note.rs  search.rs  service.rs  statistic.rs
yeah/src/service/: link.rs
