[package]
name = "yeah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
env_logger = "0"
exitcode = "1"
human-panic = "1"
hyper = { version = "0", features = ["full"] }
jsonwebtoken = "8"
log = "0"
serde_yaml = "0.9.25"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
